# pltx-tui

./: '  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  Makefile.toml  README.md  build.rs  deny.toml  rust-toolchain.toml  rustfmt.toml
.github/workflows/: tests.yaml
crates/pltx-app/: Cargo.toml
crates/pltx-app/src/: lib.rs  module.rs  state.rs  widget.rs
crates/pltx-config/: Cargo.toml  build.rs
crates/pltx-config/src/: config.rs  lib.rs
crates/pltx-database/: Cargo.toml
crates/pltx-database/src/: init_sql.rs  lib.rs
crates/pltx-tracing/: Cargo.toml
crates/pltx-tracing/src/: lib.rs
crates/pltx-utils/: Cargo.toml
crates/pltx-utils/src/: centered_rect.rs  datetime.rs  dirs.rs  lib.rs  module.rs  render.rs  symbols.rs  widget.rs  widgets.rs
crates/pltx-widgets/: Cargo.toml
crates/pltx-widgets/src/: buttons.rs  card.rs  form.rs  input.rs  lib.rs  popup.rs  scrollable.rs  selection.rs  switch.rs  tabs.rs  text_input.rs
crates/pltx-widgets/src/input/: text_input.rs
docs/: REPO_README.md  config.toml  navigation.md
pltx-dashboard/: Cargo.toml
pltx-dashboard/src/: lib.rs
pltx-home/: Cargo.toml  build.rs
pltx-home/src/: dashboard.rs  help.rs  lib.rs
pltx-project-management/: Cargo.toml  build.rs  init.sql
pltx-project-management/src/: card_editor.rs  lib.rs  list_editor.rs  list_projects.rs  open_project.rs  popups.rs  project_editor.rs  projects.rs
pltx-project-management/src/popups/: card_editor.rs  card_viewer.rs  list_editor.rs  project_editor.rs
src/: command_handler.rs  config.rs  database.rs  errors.rs  keybinds.rs  lib.rs  main.rs  screens.rs  state.rs  tracing.rs  tui.rs  ui.rs
src/components/: buttons.rs  mod.rs  popup.rs  selection.rs  text_input.rs
src/popups/: help.rs
src/screens/: dashboard.rs  mod.rs  project_management.rs  settings.rs  sleep.rs
src/screens/dashboard/: screen.rs
src/screens/project_management/: card_editor.rs  create_project.rs  delete_project.rs  list_editor.rs  list_projects.rs  mod.rs  new_card.rs  new_list.rs  new_project.rs  open_project.rs  project_editor.rs  project_management.rs  projects.rs  screen.rs
src/screens/settings/: screen.rs  settings.rs
src/screens/sleep/: screen.rs  sleep.rs
src/utils/: centered_rect.rs  mod.rs  render.rs
