[workspace]
members = [
  ".",
  "crates/pltx-app",
  "crates/pltx-config",
  "crates/pltx-database",
  "crates/pltx-tracing",
  "crates/pltx-utils",
  "crates/pltx-widgets",
  "pltx-dashboard",
  "pltx-project-management",
]

[workspace.package]
version = "0.0.1"
license = "GPL-3.0"
edition = "2021"
documentation = "https://github.com/pltx/tui"
repository = "https://github.com/pltx/tui"
homepage = "https://github.com/pltx/tui"
authors = ["Slekup <opensource@slekup.com>"]

[package]
name = "pltx-tui"
description = "Private Life Tracker X TUI"
keywords = ["tui", "privacy", "tracker"]
categories = ["tui", "privacy", "tracker"]
version.workspace = true
license.workspace = true
edition.workspace = true
documentation.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true

[[bin]]
name = "pltx"
path = "src/main.rs"

[lib]
name = "pltx"

[profile.release]
lto = true
codegen-units = 1
strip = "debuginfo"
panic = "abort"


[workspace.lints.rust]
unused_extern_crates = "deny"

[workspace.lints.rustdoc]
broken_intra_doc_links = "deny"
missing_crate_level_docs = "deny"

[workspace.lints.clippy]
todo = "deny"
unimplemented = "deny"
missing_safety_doc = "deny"

[lints]
workspace = true

[workspace.dependencies]
pltx_app = { path = "crates/pltx-app" }
pltx_config = { path = "crates/pltx-config" }
pltx_database = { path = "crates/pltx-database" }
pltx_tracing = { path = "crates/pltx-tracing" }
pltx_utils = { path = "crates/pltx-utils" }
pltx_widgets = { path = "crates/pltx-widgets" }

pltx_dashboard = { path = "pltx-dashboard" }
pltx_project_management = { path = "pltx-project-management" }

color-eyre = "0.6.3"
crossterm = "0.27.0"
ratatui = { version = "0.26.1", features = ["widget-calendar", "serde"] }
rusqlite = { version = "0.31.0", features = ["bundled"] }
r2d2 = "0.8.10"
r2d2_sqlite = "0.24.0"
tracing = "0.1.40"
home = "0.5.9"

[dependencies]
pltx_app = { workspace = true }
pltx_database = { workspace = true }
pltx_config = { workspace = true }
pltx_tracing = { workspace = true }
pltx_utils = { workspace = true }
pltx_widgets = { workspace = true }

pltx_dashboard = { workspace = true }
pltx_project_management = { workspace = true }

color-eyre = { workspace = true }
crossterm = { workspace = true }
fst = { version = "0.4.7", features = ["levenshtein"] }
ratatui = { workspace = true }
r2d2 = { workspace = true }
r2d2_sqlite = { workspace = true }
tracing = { workspace = true }
clap = { version = "4.5.4", features = ["derive"] }
