[package]
name = "pltx_dashboard"
version.workspace = true
license.workspace = true
edition.workspace = true
documentation.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true

[dependencies]
pltx_app = { workspace = true }
pltx_database = { workspace = true }
pltx_utils = { workspace = true }
crossterm = { workspace = true }
ratatui = { workspace = true }
