[package]
name = "pltx_home"
version.workspace = true
license.workspace = true
edition.workspace = true
documentation.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true

[lints]
workspace = true

[dependencies]
pltx_app = { workspace = true }
pltx_database = { workspace = true }
pltx_config = { workspace = true }
pltx_utils = { workspace = true }
pltx_widgets = { workspace = true }
color-eyre = { workspace = true }
crossterm = { workspace = true }
ratatui = { workspace = true }
serde = { workspace = true }
serde_derive = { workspace = true }
tracing = { workspace = true }
syntect = "5.2.0"
ansi-to-ratatui = { git = "https://github.com/slekup/ansi-to-ratatui" }

[build-dependencies]
serde = { workspace = true }
serde_derive = { workspace = true }
serde_yaml = "0.9.34"
