[package]
name = "pltx_app"
version.workspace = true
license.workspace = true
edition.workspace = true
documentation.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true

[lints.rust]
# missing_docs = "deny"
unused_extern_crates = "deny"

[lints.rustdoc]
broken_intra_doc_links = "deny"
missing_crate_level_docs = "deny"

[lints.clippy]
todo = "deny"
unimplemented = "deny"
missing_safety_doc = "deny"

[dependencies]
pltx_config = { workspace = true }
pltx_database = { workspace = true }
ratatui = { workspace = true }
tui-scrollview = { workspace = true }
