[package]
name = "pltx_app"
version.workspace = true
license.workspace = true
edition.workspace = true
documentation.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true

[lints]
workspace = true

[dependencies]
pltx_config = { workspace = true }
pltx_database = { workspace = true }
crossterm = { workspace = true }
ratatui = { workspace = true }
