[package]
name = "pltx_config"
version.workspace = true
license.workspace = true
edition.workspace = true
documentation.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true

[lints]
workspace = true

[dependencies]
ratatui = { workspace = true }
crossterm = { workspace = true }
home = { workspace = true }
serde = { version = "1.0.197", features = ["derive"] }
serde_derive = "1.0.197"
toml = "0.8.12"
