[package]
name = "pltx_config"
version.workspace = true
license.workspace = true
edition.workspace = true
documentation.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true

[lints]
workspace = true

[dependencies]
pltx_utils = { workspace = true }
ratatui = { workspace = true }
color-eyre = { workspace = true }
crossterm = { workspace = true }
serde = { workspace = true }
serde_derive = { workspace = true }
toml = { workspace = true }
