[package]
name = "pltx_database"
version.workspace = true
license.workspace = true
edition.workspace = true
documentation.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true

[lints]
workspace = true

[dependencies]
pltx_tracing = { workspace = true }
pltx_utils = { workspace = true }
home = { workspace = true }
tracing = { workspace = true }
r2d2 = { workspace = true }
r2d2_sqlite = { workspace = true }
rusqlite = { workspace = true }
