[package]
name = "pltx_utils"
version.workspace = true
license.workspace = true
edition.workspace = true
documentation.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true

[lints.rust]
# missing_docs = "deny"
unused_extern_crates = "deny"

[lints.rustdoc]
broken_intra_doc_links = "deny"
missing_crate_level_docs = "deny"

[lints.clippy]
todo = "deny"
unimplemented = "deny"
missing_safety_doc = "deny"

[dependencies]
chrono = "0.4.38"
pltx_tracing = { workspace = true }
crossterm = { workspace = true }
ratatui = { workspace = true }
tracing = { workspace = true }
