[package]
name = "pltx_utils"
version.workspace = true
license.workspace = true
edition.workspace = true
documentation.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true

[lints]
workspace = true

[dependencies]
chrono = "0.4.38"
dirs = "5.0.1"
color-eyre = { workspace = true }
crossterm = { workspace = true }
ratatui = { workspace = true }
tracing = { workspace = true }
