[package]
name = "pltx_widgets"
version.workspace = true
license.workspace = true
edition.workspace = true
documentation.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true

[lints]
workspace = true

[dependencies]
pltx_app = { workspace = true }
pltx_config = { workspace = true }
pltx_utils = { workspace = true }
color-eyre = { workspace = true }
crossterm = { workspace = true }
ratatui = { workspace = true }
tracing = { workspace = true }
